--- a/web/themes/custom/eses/scss/component/_calendar.scss
+++ b/web/themes/custom/eses/scss/component/_calendar.scss
@@ -28,7 +28,7 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
         box-shadow: $calendar_shadow;
         font-size: .75em;
         font-weight: bold;
-        margin: 0 1em 1em 0;
+        margin: 5px 1em 1em 5px;
 
         .month {
           display: block;
@@ -81,6 +81,7 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
         font-size: .75em;
 
         .date {
+          margin: 0 1em 1em 0;
           width: 30px;
         }
 
@@ -108,6 +109,7 @@ $calendar_shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
 
     @media #{$tablet} {
       max-height: none;
+      overflow: visible;
     }
   }
 }
